Always allow call to setDraggableArea.

Virtual keyboard's extension may call this function when controller has
been destroyed(when system switch from virtual keyboard to physical
keyboard) or in full width mode, no need to throw exception in these
cases.

Bug: 825709
Change-Id: I8e565f7b090f619d08814af55450ad0f437486cd
Reviewed-on: https://chromium-review.googlesource.com/994497
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Commit-Queue: Li Zhao <iloahz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548002}
Former-commit-id: dfbb726b897c2bdafe0d9c684934ffb11e0d833e